--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.6.4",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
   }
