--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.6.4",
-    "webpack": "^4.39.2",
+    "webpack": "4.35.3",
     "webpack-cli": "^3.3.7"
   }
 }
