--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "escodegen": "^1.12.0",
     "html-webpack-plugin": "^3.2.0",
+    "loader-utils": "^1.2.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.6.4",
     "webpack": "4.35.3",
